[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantfin-toolkit"
version = "0.1.0"
description = "A small, dependency-light toolkit for fixed income, options, portfolio, and risk-model-validation calculations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Jun Shen" }
]
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "python-dateutil>=2.8",
]

[project.urls]
Repository = "https://github.com/shen-jun/quantfin-toolkit"

[tool.setuptools.packages.find]
include = ["quantfin*"]
